fixing spacing issue

--- a/app/assets/stylesheets/spree/frontend/spree_blog.scss
+++ b/app/assets/stylesheets/spree/frontend/spree_blog.scss
@@ -1,203 +1,3 @@
-/*
-Placeholder manifest file.
-the installer will append this file to the app vendored assets here: 'vendor/assets/stylesheets/spree/frontend/all.css'
-*/
-
-#blog img {
-  max-width: 100%;
-}
-
-#blog {
-    padding: 0 30px 30px;
-}
-
-#blog .fits {
-  max-width: 730px;
-}
-
-.blog_archive__list {
-    padding: 0;
-    list-style-type: none;
-}
-
-.blog_archive__list--months {
-    padding-left: 0.5em;
-    display: none;
-}
-
-.blog_archive__list--archiveables {
-    margin-bottom: 0.5em;
-    padding-left: 0.5em;
-    display: none;
-}
-
-.blog_archive__item--post {
-    margin: 0.5em 0;
-}
-
-.blog_header--page {
-    font-size: 2em;
-}
-.blog-tag-title {
-  text-align: center;
-  font-size: 36px;
-  color: #8a8a8a;
-  padding-bottom: 25px;
-  border-bottom: 1px solid #C5C5C5;
-  margin-bottom: 20px;
-  margin-top: 0px;
-}
-
-.row.blog_posts_list {
-    margin: 0;
-}
-
-.blog_post {
-    font-size: 1.2em;
-    line-height: 2em;
-    p {
-      font-size: 16px;
-      max-width: 730px;
-      margin: 0 auto;
-      line-height: 23px;
-      margin-top: 1.5em;
-      font-weight: 300;
-    }
-}
-
-.blog_post__published_at {
-  text-align: center;
-}
-
-.blog_post h2 {
-    font-size: 1.5em;
-    margin: 0 auto;
-    margin-bottom: 1em;
-    margin-top: .7em;
-    max-width: 730px;
-}
-
-.blog_post h3 {
-    margin: 0 auto;
-    margin-bottom: 1em;
-    margin-top: .7em;
-    max-width: 730px;
-}
-
-h2.blog_post__header,
-h1.blog_post__header{
-    margin: 0 0 1em;
-    max-width: 730px;
-    margin: 0 auto;
-    text-align: center;
-    margin-bottom: 0;
-    color: #484848;
-    font-weight: 300;
-    font-size: 36px;
-    .blog_post__header_link {
-      color: #484848;
-      font-weight: 300;
-      font-size: 36px;
-    }
-}
-
-.blog_post__information {
-    margin: 10px 0 30px;
-    padding: 10px 15px;
-    background: #ededed;
-    font-style: italic;
-}
-
-#blog_tags {
-  clear: both;
-  margin: 20px 0;
-  text-align: center;
-  a {
-    color: #e26207;
-    font-size: 16px;
-    font-weight: 200;
-    padding: 0 6px
-  }
-}
-
-#blog_related_posts,
-.blog_comments_list,
-#comment_form {
-    clear: both;
-    border-top: 1px solid silver;
-    margin: 20px 0;
-}
-
-#blog_tags .blog_tags__list {
-    margin: 0;
-    padding: 0;
-}
-
-#blog_tags .blog_tags__list .blog_tag {
-    display: inline-block;
-    list-style: none;
-    font-size: 1.2em;
-}
-
-#blog_tags .blog_tags__list .blog_tag a {
-    color: white;
-}
-
-#blog_tags .blog_tags__list .blog_tag a:hover {
-    text-decoration: none;
-}
-
-.blog_tags__list .header {
-
-}
-
-.blog-main-tag {
-  max-width: 730px;
-  text-align: center;
-  margin: 0 auto;
-  margin-bottom: 25px;
-  color: #e26207;
-  display: block;
-  font-size: 16px;
-  font-weight: 200;
-}
-
-.blog_tags-li {
-    display: inline;
-}
-
-.blog_related_posts__list .blog_related_post {
-    font-size: 1.2em;
-}
-
-.blog_comments_list {
-    margin: 20px 0;
-}
-
-.blog_comment {
-    margin: 20px 0;
-    padding: 15px;
-    font-size: .9em;
-}
-
-.blog_comment.odd {
-    background: #ededed;
-}
-
-.blog_comment__name {
-    margin: 0 0 1em;
-    font-style: italic;
-}
-
-.blog_comment__created_at {
-    font-style: italic;
-}
-
-#comment_form #blog_comment_body {
-    height: 8em;
-}
-
-.blog-return {
-  margin-top: 15px;
-  display: inline-block;
+.blog_post{
+  margin-bottom: 2%;
 }
